<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ENGLISH -->

    <string name="app_name">Dixza</string>
    <string name="TeotitlanDelValleZapotec">Teotitlán del Valle Zapotec</string>
    <string name="AndroidTalkingDictionary">Android Talking Dictionary</string>
    <string name="side_menu">Menu</string>
    <string name="englishInterface">ENG</string>
    <string name="spanishInterface">ESP</string>
    <string name="zapotecInterface">ZAP</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="wordOfTheDay">Word of the Day</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="title_activity_word_definition">Word Definition</string>
    <string name="title_activity_search_fragment">SearchFragment</string>
    <string name="title_main_section">Word of the Day</string>
    <string name="title_section2">Update</string>
    <string name="title_section3">About</string>
    <string name="password_section">Admin Log In</string>
    <string name="audio_section">Record Audio</string>
    <string name="photo_section">Take Photo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appExplanation">This android application is intended to be an offline version of the Teotitlán del Valle Zapotec online talking dictionary, which can be found at: </string>
    <string name="website"><u>http://talkingdictionary.swarthmore.edu/teotitlan/</u></string>
    <string name="about">All content copyright © the recorded Zapotec communities (2013-2015).
Dictionary produced by Brook Danielle Lillehaugen, 
Janet Chávez Santiago, Ambrocio Gutiérrez, Bibiana Gutiérrez, Nick Kalivoda, 
Alex Mannix, Teresa Martínez Chavez and Troi Carleton, with Helen Felker and Rachel Elizabeth Weissler, 
with support from K. David Harrison and Jeremy Fahringer. (2013-2014).
Mobile application developed by Adriana Castilla and Juliette Klingsberg with support from Brook Danielle Lillehaugen, Janet Chávez Santiago, and Jeremy Fahringer. (2015).
All rights reserved. Do not distribute or reproduce without permission.</string>
    <string name="help">Help</string>
    <string name="title_activity_search">Search Activity</string>
    <string name="preview_image">Image Preview</string>
    <string name="passwordExplanation">Administrator access only.</string>
    <string name="password">Password: </string>
    <string name="passwordIncorrect">Incorrect password</string>
    <string name="submit">Submit</string>
    <string name="search_hint">Search dictionary</string>
    <string name="updateInfo">The Valley Zapotec Talking Dictionary is constantly growing. Each time you update, the new words will take up more space on your phone. If space is a concern, you may choose if you want to download audio and pictures.</string>
    <string name="downloadAudio">Download Audio</string>
    <string name="downloadPictures">Download Pictures</string>
    <string name="update">Update</string>
    <string name="speaker">Speaker: </string>
    <string name="audioFragmentDescription">"Click \"Start recording\" to start recording audio and click \"Stop recording\" to end the recording. You can play the recording with the \"Start playing/Stop playing\" button. You may name your audio file in the text field. Audio files can be accessed on your device's local storage under the \"Zapotec Talking Dictionary/audio\" directory."</string>
    <string name="photoName">"Photo name:"</string>
    <string name="audioName">"Audio name:"</string>
    <string name="stopRecording">"Stop recording"</string>
    <string name="startRecording">"Start recording"</string>
    <string name="stopPlaying">"Stop playing"</string>
    <string name="startPlaying">"Start playing"</string>
    <string name="save">"Save"</string>
    <string name="imageFragmentDescription">"Click \"Take Photo\" to take a photo and enter a name for your file. Photos can be accessed on your device's local storage under the \"Zapotec Talking Dictionary/photos\" directory."</string>
    <string name="retakePhoto">"Retake Photo"</string>
    <string name="takeAnotherPhoto">Take Another Photo</string>
    <string name="takePhoto">"Take Photo"</string>
    <string name="passwordAccepted">"Password accepted"</string>
    <string name="updated">Database updated successfully</string>
    <string name="noUpdate">Database alreay up to date.</string>
    <string name="EnglishDefinition">"English: "</string>
    <string name="SpanishDefinition">"Spanish: "</string>
    <string name="logout">Log Out</string>
    <string name="logoutAccepted">Log out successful</string>
    <string name="logoutExplanation">Logging out recinds access to audio and photo tools. You can always log back in anytime.</string>
    <string name="semanticDomain_text">Category:</string>
    <string name="username">Name:</string>
    <string name="passwordWelcome">Welcome</string>
    <string name="settingsExplanation">Enter your name below. Your name will be used to automatically name photos and audio files you capture through the app.</string>
    <string name="title_settings">Settings</string>
    <string name="settingsSaved">Settings Saved</string>
    <string name="db_specs"> words are in the database</string>
    <string name="last_updated">Last updated: </string>
    <string name="checkOncePerDay">You may check for updates once per day</string>
    <string name="recording">RECORDING</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="report_textView">Is there a problem with the app or dictionary that you would like to report? You can report the problem via email by clicking the button below.</string>
    <string name="report_button">Report problem</string>
    <string name="reportEmail_subject">"Dixza Android Application Bug Report"</string>
    <string name="reportEmail_body">"Bug description:\n"</string>
    <string name="searchResults">Search Results</string>
    <string name="wordDefinition">Word Defition</string>
    <string name="photoSaved">Photo saved</string>
    <string name="audioSaved">Audio saved</string>
    <string name="downloadFileSizeText">"Would you like to download a file of this size?"</string>
    <string name="cancel">Cancel</string>
    <string name="settingUpDatabase">"Setting up database..."</string>
    <string name="finishedSettingUpDB">"Finished setting up the database"</string>
    <string name="uploadComplete">"Upload complete"</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="authenticationError">"Upload complete"</string>
    <string name="dropboxErrorMessage">"There was an error logging into Dropbox."</string>
    <string name="termsOfUse">"Terms of Use/\nCondiciones de Uso"</string>
    <string name="accept">"Accept/\nAccept"</string>
    <string name="reject">"Reject/\nReject"</string>
    <string name="uploading">UPLOADING</string>
    <string name="uploadInfo">You can upload content saved from this app to Dropbox by clicking UPLOAD. When you upload content to Dropbox, you will be given the option to remove the uploaded content from your device.</string>
	<string name="deleteInfo">Clicking DELETE CONTENT will delete all content (photos and audio) recorded through this app.</string>
    <string name="deleteContent">Clicking DELETE CONTENT will delete all content (photos and audio) recorded through this app.</string>
	<string name="upload">Upload</string>
	<string name="uploadToDropboxComplete">Upload to Dropbox is complete:</string>
	<string name="imagesUploaded">images uploaded</string>
	<string name="audioFilesUploaded">audio files uploaded</string>
	<string name="allFilesWereUploaded">All files were uploaded</string>
	<string name="followingFilesNotUploadedSuccessfully">The following files were not uploaded successfully:</string>
	<string name="deleteUploadedFilesPrompt">Do you want to delete the uploaded files from your device?</string>
    
    <string-array name="languages_array">
        <item>ENG</item>
        <item>ESP</item>
        <item>ZAP</item>
    </string-array>
    <string-array name="search_options">
        <item>Entire dictionary</item>
        <item>Teotitlán del Valle Zapotec</item>
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="domain_options">
        <item>all</item>
        <item>animal</item>
        <item>body parts</item>
        <item>clima</item>
        <item>clothing</item>
        <item>color</item>
        <item>food</item>
        <item>kinship</item>
        <item>location</item>
        <item>persona</item>
        <item>time</item>
        <item>ubicación</item>
    </string-array>

    <string name="current_language">English</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
