<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp" >

    <TextView
        android:id="@+id/passwordExplanation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordExplanation"
        android:layout_marginBottom="20dp"
         />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />
    
    <TextView
        android:id="@+id/passwordIncorrect_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordIncorrect" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/password_submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>
