<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.valleyzapotectalkingdictionary.AboutActivity" >

    <item
        android:id="@+id/englishInterface"
        android:title="@string/englishInterface"
        app:showAsAction="always"/>
    <item
        android:id="@+id/spanishInterface"
        android:title="@string/spanishInterface"
        app:showAsAction="always"/>
    <item
        android:id="@+id/zapotecInterface"
        android:title="@string/zapotecInterface"
        app:showAsAction="always"/>
    <item
        android:id="@+id/about"
        android:title="About"
        app:showAsAction="never"/>
    <item
        android:id="@+id/update"
        android:title="Update"
        app:showAsAction="never"/>
    <!-- <item
        android:id="@+id/settings"
        android:title="@string/settings_eng"
        app:showAsAction="never"/> -->

</menu>
