<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp" >
    
		<TextView
			android:id="@+id/settingsExplanation_textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settingsExplanation"
			android:layout_marginBottom="20dp" />
		
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    
	        <TextView
		        android:id="@+id/username_textView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/username" />
	        
	        <EditText
		        android:id="@+id/username_editText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textPersonName" />
        
    	</LinearLayout>

	    <Button
	        android:id="@+id/settings_submitButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/save" />
	    
	    <Button
	        android:id="@+id/upload_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Upload" />

</LinearLayout>
