<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.valleyzapotectalkingdictionary.UpdateActivity" >

    <TextView
        android:id="@+id/updateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:text="@string/updateInfo" />
<!-- 
    <CheckBox
        android:id="@+id/downloadPicturesCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/updateText"
        android:layout_below="@+id/updateText"
        android:layout_marginTop="26dp"
        android:checked="true"
        android:text="@string/downloadPictures" />

    <CheckBox
        android:id="@+id/downloadAudioCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/downloadPicturesCheckbox"
        android:layout_below="@+id/downloadPicturesCheckbox"
        android:checked="true"
        android:text="@string/downloadAudio" /> -->
<!-- 
    <TextView
        android:id="@+id/currentLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateButton"
        android:layout_centerHorizontal="true"
        android:text="@string/current_language" /> -->

	<TextView
        android:id="@+id/db_specs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/updateText"
        android:text="@string/db_specs" />
	
	<TextView
        android:id="@+id/last_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/db_specs"
        android:text="@string/last_updated" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/last_updated"
        android:layout_marginTop="20dp"
        android:text="@string/update" />

</RelativeLayout>
